# mobius

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ideas.md  pyproject.toml
.claude/agents/: challenger.md  competition-tasks.md  depth-test.md  tree-solver.md
.claude/skills/mobius-audit/: SKILL.md
.claude/skills/mobius-audit/scripts/: health_check.py
.claude/skills/mobius-evolve/: SKILL.md
.claude/skills/mobius-judge/: SKILL.md
.claude/skills/mobius-judge/scripts/: load_match.py  (+1 more)
.claude/skills/mobius-profile/: SKILL.md
.claude/skills/mobius-run/: SKILL.md
.claude/skills/mobius-seed/: SKILL.md
.claude/skills/tree-solve/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.html
docs/themes/: brutalist-webcrafter.html  data-narrative.html  editorial-typographer.html  motion-storyteller.html  terminal-aesthetic.html
experiments/: research_challenge.py  run_experiment.py
labs/: 2026-03-14-skill-forge.md
scripts/: cleanup_agents.py  competition_tasks.json  competition_tasks_agentic.json
src/mobius/: __init__.py  agent_builder.py  cli.py  config.py  db.py  embedder.py  judge.py  memory.py  metrics.py  models.py  orchestrator.py  registry.py  runner.py  seeds.py  selector.py  swarm.py  tournament.py  ui.py
src/mobius/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openrouter.py  tools.py
tests/: helpers.py  test_registry.py  test_selector.py  test_skill_scripts.py  test_tournament.py
(+6 files in other folders)
