[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mobius"
version = "0.1.0"
description = "Adversarial agent swarm orchestrator with multi-provider support"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "claude-agent-sdk>=0.1.48",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
    "typer>=0.15.0",
    "pydantic>=2.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
    "rich>=13.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mobius = "mobius.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mobius"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
